--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/axios": "^0.14.4",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -22,6 +23,7 @@
     "@babel/plugin-transform-optional-chaining": "^7.23.9",
     "@babel/plugin-transform-private-methods": "^7.23.9",
     "@babel/plugin-transform-private-property-in-object": "^7.23.9",
+    "@types/axios-mock-adapter": "^1.10.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "postcss": "^8.4.35",
