--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.5.0",
