--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.544.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
